# SConnect

./: CMakeLists.txt  README.md
include/: Client.h  Message.h  SConnect.h  Server.h
src/: Client.cpp  ClientTest.cpp  Server.cpp  ServerTest.cpp
